Data Preparation Connections and Workspaces improvements [CDAP-9447] Add Call to Action to empty search message in File Browser [CDAP-11544] Vertically center align data prep table header [CDAP-11674] Modify File Upload Top panel [CDAP-11427] Not allow space when renaming column fix database logo not showing up in config page collapsed file browser remove number of columns from database browser add test connection button to advance database detail

--- a/cdap-ui/app/cdap/components/DataPrep/TopPanel/TopPanel.scss
+++ b/cdap-ui/app/cdap/components/DataPrep/TopPanel/TopPanel.scss
@@ -60,6 +60,10 @@ $action-btn-inactive-color: #aaaaaa;
         .connection-type {
           font-size: 13px;
           color: $top-panel-connection-color;
+
+          .connection-name {
+            margin-left: 5px;
+          }
         }
       }
 
